Build 0.12.5 - Fixed table alignment

--- a/src/ion.css
+++ b/src/ion.css
@@ -2470,10 +2470,9 @@ table.table tr th{
     padding: 22px 24px 22px 24px;
 }
 table.table tr td{
-    text-align: center;
     padding: 17px 24px 17px 24px;
 }
-table.table tr th, table.table tr td:first-child{
+table.table tr th{
     text-align: left;
 }
 
